tests/macros/order_select/separator.stderr
error: expected `,` or `;`
 --> tests/macros/order_select/separator.rs:6:21
  |
6 |                 sep "separator",
  |                     ^^^^^^^^^^^
