tests/macros/order_select/separator.rs
fn main() {
    requestty::questions! [
        OrderSelect {
            name: "name",
            choices: [
                sep "separator",
            ],
        }
    ];
}
